--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,3 +1,72 @@
-.app {
-    background: red;
+.header_wrapper {
+  top: 0;
+  left: 0;
+  position: fixed;
+  height: 10%;
+  width: 100%;
+}
+
+.header_wrapper .header_title {
+  color: white;
+  font-weight: bold;
+  font-size: 45px;
+  font-family: "Roboto Slab", sans-serif;
+  padding-left: 20px;
+}
+
+body {
+  background: rgb(38, 89, 100);
+  height: 1500px;
+}
+
+.header_wrapper img {
+  height: 65px;
+}
+
+.form_wrapper {
+  height: auto;
+  text-align: center;
+  color: white;
+  width: 35%;
+  border: solid orange 2px;
+  border-radius: 5px;
+  position: fixed;
+  padding: 50px 90px;
+  margin: 15% 0 0 25%;
+  font-weight: bold;
+  font-family: "PT Sans", sans-serif;
+  font-size: xx-large;
+}
+
+.form_wrapper .form_input {
+  background: inherit;
+  display: block;
+  outline: none;
+  margin-top: 35px;
+  margin-left: 100px;
+  color: white;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  width: 60%;
+  text-align: center;
+  font-family: "Roboto Slab", sans-serif;
+}
+
+.form_wrapper .form_submit {
+  display: inline-block;
+  font-weight: 400;
+  color: white;
+  margin-top:15px;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  background-color: #367a58;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
