--- a/client/src/style.css
+++ b/client/src/style.css
@@ -70,3 +70,10 @@ body {
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
+
+
+.main_rwr{
+  height: 100%;
+  position: absolute;
+  border:3px solid black
+}
