Basics of profile,need to make HOC to render it

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -30,9 +30,9 @@ body {
   width: 35%;
   border: solid orange 2px;
   border-radius: 5px;
-  position: fixed;
+  position: absolute;
   padding: 50px 90px;
-  margin: 15% 0 0 25%;
+  margin: 5% 0 0 25%;
   font-weight: bold;
   font-family: "PT Sans", sans-serif;
   font-size: xx-large;
@@ -57,7 +57,7 @@ body {
   display: inline-block;
   font-weight: 400;
   color: white;
-  margin-top:15px;
+  margin-top: 15px;
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
@@ -71,9 +71,46 @@ body {
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
+/* .profile_wrapper {
+  background: inherit;
+  display: inline-block;
+  outline: none;
+  margin-top: 55%;
+  margin-left: 100px;
+  color: white;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  width: 60%;
+  text-align: center;
+  position: fixed;
+  font-family: "Roboto Slab", sans-serif;
+} */
 
-.main_rwr{
-  height: 100%;
+.profile_wrapper {
+  height: auto;
+  text-align: center;
+  color: white;
+  width: 35%;
+  border: solid orange 2px;
+  border-radius: 5px;
   position: absolute;
-  border:3px solid black
+  margin-top: 30%;
+  font-weight: bold;
+  font-family: "PT Sans", sans-serif;
+  font-size: xx-large;
+  white-space: nowrap;
+}
+
+.profile_wrapper .img_src{
+  height: 100px;
+  width: 100px;
+  border:2px black solid;
+  float: left;
+  font-size: small;
+}
+
+.profile_wrapper .userData{
+  font-size: medium;
+  float: left;
 }
