--- a/client/src/style.css
+++ b/client/src/style.css
@@ -88,10 +88,9 @@ body {
 } */
 
 .profile_wrapper {
-  height: auto;
   text-align: center;
   color: white;
-  width: 35%;
+  /* width: 45%; */
   border: solid orange 2px;
   border-radius: 5px;
   position: absolute;
@@ -113,4 +112,8 @@ body {
 .profile_wrapper .userData{
   font-size: medium;
   float: left;
+}
+
+.profile_wrapper .bargraph{
+  font-size: small;
 }
